# ExtendedTicTacToe

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  statsdialog.cpp  statsdialog.h
.qt/: QtDeploySupport.cmake
game/: game_engine.cpp  game_engine.h  game_types.h
game/modes/: classic_mode.cpp  classic_mode.h  igame_mode.h  score_mode.cpp  score_mode.h  ultimate_mode.cpp  ultimate_mode.h
game/score/: score_helpers.cpp  score_helpers.h
ui/: rulesdialog.cpp  rulesdialog.h
widgets/: boardwidget.cpp  boardwidget.h
